@@ -429,6 +429,8 @@ Bug Fixes
 
 * SOLR-2148: Highlighter doesn't support q.alt. (koji)
 
+* SOLR-2139: Wrong cast from string to float (Igor Rodionov via koji)
+
 Other Changes
 ----------------------
 
